# live-share-client

./: .gitlab-ci.yml  ExecutableValidator.h  Jenkinsfile  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Recorder.cpp  Recorder.h  RecordingManager.cpp  RecordingManager.h  Upload.cpp  Upload.h  UploadManager.cpp  UploadManager.h  WindowInfo.cpp  WindowInfo.h  WindowInfo_cocoa.m  WindowInfo_win.cpp  WindowInfo_x11.cpp  conanfile.py  meson.build
deployment/: compress-binaries  gather-libraries  meson.build
src/: ExecutableValidator.cpp  ExecutableValidator.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Recorder.cpp  Recorder.h  UploadManager.cpp  UploadManager.h  UploadQueueEntry.cpp  UploadQueueEntry.h  UploadQueueWidget.cpp  UploadQueueWidget.h  WindowInfo.h  main.cpp  meson.build
subprojects/keysequence_widget/: .gitignore  README  meson.build
subprojects/keysequence_widget/keysequence_widget_designer_plugin/: keysequence_listwidget_plugin.cpp  keysequence_listwidget_plugin.h  keysequence_widget_plugin.cpp  keysequence_widget_plugin.h  keysequence_widget_plugin_collection.cpp  keysequence_widget_plugin_collection.h  meson.build
subprojects/keysequence_widget/src/: keysequence_listwidget.cpp  keysequence_listwidget.h  keysequence_widget.cpp  keysequence_widget.h  keysequence_widget_shared.h  meson.build
subprojects/qhotkey/: meson.build
subprojects/qhotkey/QHotkey/: qhotkey.h
subprojects/qtkeychain/: gen-dbus-interface  keychain.h  keychain_p.h  keychain_unix.cpp  kwallet_interface.cpp  kwallet_interface.h  meson.build
subprojects/qtkeychain/translations/: meson.build
