translations = qt5.compile_translations(ts_files: ['qtkeychain_de.ts',
                                                   'qtkeychain_ro.ts'],
                                        build_by_default: true,
                                        install: true,
                                        install_dir: 'shared')
    # TODO: And now? Is that all?
